# GenshinRichPresence

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GenshinRichPresence.spec  LICENSE  README.md  RP.py  config.ini  logging.conf  pyproject.toml  requirements.txt  setup.cfg  setup.nsi
.github/workflows/: install-dependencies.yaml  validations.yaml
data/characters/: PlayableCharacterData.ini  characters_data.json
data/world/: WorldData.ini  world_data.json
src/: config.py  game_monitor.py  interaction_manager.py  log_monitor.py  main.py  rich_presence.py
src/data_handler/: fetch_data.py  update_data.py
src/utils/: data_tools.py  exception_manager.py  handle_exit.py
