[tool.poetry]
name = "GenshinRichPresence"
version = "0.1.1"
description = "Discord Rich Presence for Genshin Impact"
authors = ["Artprozew <artprozew@gmail.com>"]
license = "LGPL 2.1"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pywin32 = "^306"
pypresence = "^4.3.0"
psutil = "^5.9.8"
nest-asyncio = "^1.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
